--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "connect-mongo": "^5.0.0",
         "connect-mongodb-session": "^3.1.1",
         "cors": "^2.8.5",
+        "date-fns": "^2.30.0",
         "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "express-session": "^1.17.3",
