--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "multer": "^1.4.5-lts.1",
         "passport": "^0.6.0",
         "passport-local": "^1.0.0",
+        "react-html-table-to-excel": "^2.0.0",
         "xlsx": "^0.18.5"
     }
 }
