--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "express": "^4.18.2",
         "express-session": "^1.17.3",
         "fs": "^0.0.1-security",
+        "html2pdf.js": "^0.10.1",
         "jsonwebtoken": "^9.0.1",
         "mongoose": "^7.4.3",
         "multer": "^1.4.5-lts.1",
